@@ -25,6 +25,9 @@
 
 		/**
 		 * @param {Object} configurationObject
+		 * @param {CMDBuild.controller.common.MainViewport} configurationObject.parentDelegate
+		 *
+		 * @returns {Void}
 		 *
 		 * @override
 		 */
@@ -38,6 +41,8 @@
 
 		/**
 		 * @param {Number} nodeIdToSelect
+		 *
+		 * @returns {Void}
 		 *
 		 * @override
 		 */
