@@ -39,6 +39,9 @@
 
 		/**
 		 * @param {Object} configurationObject
+		 * @param {CMDBuild.controller.common.MainViewport} configurationObject.parentDelegate
+		 *
+		 * @returns {Void}
 		 *
 		 * @override
 		 */
@@ -52,6 +55,8 @@
 
 		/**
 		 * @param {Number} nodeIdToSelect
+		 *
+		 * @returns {Void}
 		 *
 		 * @override
 		 */
