@@ -56,6 +56,8 @@ FIXES
 
  * Enable modify relations in manageRelation
 
+ * Selecting starting class errors when Navigation accordion is hidden
+
 
 
 
